// 版本号
syntax = "proto3";

// 指定包名
package proto.social;

option go_package = "pb/social";

import "proto/user.proto";

  message rpc_relation_action_request {
   int64 user_id = 1; // 用户鉴权token
   int64 to_user_id = 2; // 对方用户id
   int32 action_type = 3; // 1-关注，2-取消关注
   }
  
  message douyin_relation_action_response {
     int32 status_code = 1; // 状态码，0-成功，其他值-失败
     string status_msg = 2; // 返回状态描述
  }

  message douyin_relation_follow_list_request {
     int64 user_id = 1; // 用户id
     string token = 2; // 用户鉴权token
  }
  
  message douyin_relation_follow_list_response {
     string status_code = 1; // 状态码，0-成功，其他值-失败
     string status_msg = 2; // 返回状态描述
    repeated proto.user.User user_list = 3; // 用户信息列表
  }

  message douyin_relation_follower_list_request {
     int64 user_id = 1; // 用户id
     string token = 2; // 用户鉴权token
  }
  
  message douyin_relation_follower_list_response {
     string status_code = 1; // 状态码，0-成功，其他值-失败
     string status_msg = 2; // 返回状态描述
    repeated proto.user.User user_list = 3; // 用户列表
  }

  message douyin_relation_friend_list_request {
     int64 user_id = 1; // 用户id
     string token = 2; // 用户鉴权token
  }
  
  message douyin_relation_friend_list_response {
     string status_code = 1; // 状态码，0-成功，其他值-失败
     string status_msg = 2; // 返回状态描述
    repeated FriendUser user_list = 3; // 用户列表
  }

  message FriendUser {
   int64 id = 1; // 用户id
   string name = 2; // 用户名称
   int64 follow_count = 3; // 关注总数
   int64 follower_count = 4; // 粉丝总数
   bool is_follow = 5; // true-已关注，false-未关注
   string avatar = 6; //用户头像
   string background_image = 7; //用户个人页顶部大图
   string signature = 8; //个人简介
   int64 total_favorited = 9; //获赞数量
   int64 work_count = 10; //作品数量
   int64 favorite_count = 11; //点赞数量
   string message = 12; // 和该好友的最新聊天消息
   int64 msgType = 13; // message消息的类型，0 => 当前请求用户接收的消息， 1 => 当前请求用户发送的消息
   }

  message rpc_message_chat_request {
   int64 user_id = 1; // 用户鉴权token
   int64 to_user_id = 2; // 对方用户id
   int64 pre_msg_time=3;//上次最新消息的时间（新增字段-apk更新中）
   }
  
  message douyin_message_chat_response {
     string status_code = 1; // 状态码，0-成功，其他值-失败
     string status_msg = 2; // 返回状态描述
    repeated Message message_list = 3; // 消息列表
  }
  
  message Message {
     int64 id = 1; // 消息id
     int64 to_user_id = 2; // 该消息接收者的id
     int64 from_user_id =3; // 该消息发送者的id
     string content = 4; // 消息内容
     int64 create_time = 5; // 消息创建时间
  }


  message rpc_message_send_request {
   int64 user_id = 1; // 用户鉴权token
   int64 to_user_id = 2; // 对方用户id
   int32 action_type = 3; // 1-发送消息
   string content = 4; // 消息内容
   }
  
  message douyin_message_send_response {
     int32 status_code = 1; // 状态码，0-成功，其他值-失败
     string status_msg = 2; // 返回状态描述
  }

  message find_follows_request {
     int64 user_id = 1; // 用户id
     repeated int64 ids = 2; // 查询用户关注的用户id列表
  }

   message find_follows_response {
       map<int64, bool> follow_map = 1; // 用户关注的用户id列表
   }

  service social {
       rpc douyin_relation_action(rpc_relation_action_request) returns (douyin_relation_action_response){
         
       } // 关注/取消关注
       rpc douyin_relation_follow_list(douyin_relation_follow_list_request) returns (douyin_relation_follow_list_response){

       } // 关注列表
       rpc douyin_relation_follower_list(douyin_relation_follower_list_request) returns (douyin_relation_follower_list_response){

       } // 粉丝列表
       rpc douyin_relation_friend_list(douyin_relation_friend_list_request) returns (douyin_relation_friend_list_response){

       } // 好友列表
       rpc douyin_message_chat(rpc_message_chat_request) returns (douyin_message_chat_response){

       } // 聊天消息列表
       rpc douyin_message_send(rpc_message_send_request) returns (douyin_message_send_response){

       } // 发送消息
       rpc find_follows(find_follows_request) returns (find_follows_response){
   
       } // 查询用户关注的用户id列表
}